fix page overflow

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,7 +1,6 @@
 header {
     display: flex;
     justify-content: space-between;
-    width: 100vw;
     padding: 1vw;
     border-bottom: 1px solid $black;
     margin-bottom: 80px;
